---
source: owl-parser/src/parser/stmt.rs
expression: "stmt(\"{ 1; 2; { 3; } }\")"

---
Stmt {
    kind: Block(
        [
            Stmt {
                kind: ExprStmt(
                    Expr {
                        kind: NumberLit(
                            1.0,
                        ),
                        span: 2..3,
                    },
                ),
                span: 2..4,
            },
            Stmt {
                kind: ExprStmt(
                    Expr {
                        kind: NumberLit(
                            2.0,
                        ),
                        span: 5..6,
                    },
                ),
                span: 5..7,
            },
            Stmt {
                kind: Block(
                    [
                        Stmt {
                            kind: ExprStmt(
                                Expr {
                                    kind: NumberLit(
                                        3.0,
                                    ),
                                    span: 10..11,
                                },
                            ),
                            span: 10..12,
                        },
                    ],
                ),
                span: 8..14,
            },
        ],
    ),
    span: 0..16,
}
